--- a/exercNetLex/exercNetLex.csproj
+++ b/exercNetLex/exercNetLex.csproj
@@ -247,6 +247,8 @@
     </Compile>
     <Compile Include="RibbonPresenter.cs" />
     <Compile Include="Source\Presenters\TableConfigPresenter.cs" />
+    <Compile Include="Source\Services\IWordService.cs" />
+    <Compile Include="Source\Services\WordService.cs" />
     <Compile Include="Source\Views\ITableConfigView.cs" />
     <Compile Include="Source\Views\TableConfigView.cs">
       <SubType>Form</SubType>
@@ -269,7 +271,6 @@
     <Folder Include="Resources\" />
     <Folder Include="Source\Models\" />
     <Folder Include="Source\Ribbon\" />
-    <Folder Include="Source\Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -283,7 +284,7 @@
     </ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>16A7386DC10F524FE24B117F438A01C76E61C9C6</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>1986AC4A146C61B04BCA5B33166D54415191A123</ManifestCertificateThumbprint>
   </PropertyGroup>
   <!-- Include the build rules for a C# project. -->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
