--- a/exercNetLex/exercNetLex.csproj
+++ b/exercNetLex/exercNetLex.csproj
@@ -176,17 +176,18 @@
   <ItemGroup>
     <Compile Include="FindPanelPresenter.cs" />
     <Compile Include="Source\Presenters\AddFieldPresenter.cs" />
+    <Compile Include="Source\Presenters\AddSpanPresenter.cs" />
     <Compile Include="Source\Views\AddFieldView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Source\Views\AddFieldView.Designer.cs">
       <DependentUpon>AddFieldView.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmAddSpan.cs">
+    <Compile Include="Source\Views\AddSpanView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmAddSpan.Designer.cs">
-      <DependentUpon>FrmAddSpan.cs</DependentUpon>
+    <Compile Include="Source\Views\AddSpanView.Designer.cs">
+      <DependentUpon>AddSpanView.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmQualificacao.cs">
       <SubType>Form</SubType>
@@ -206,8 +207,8 @@
     <EmbeddedResource Include="Source\Views\AddFieldView.resx">
       <DependentUpon>AddFieldView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmAddSpan.resx">
-      <DependentUpon>FrmAddSpan.cs</DependentUpon>
+    <EmbeddedResource Include="Source\Views\AddSpanView.resx">
+      <DependentUpon>AddSpanView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmQualificacao.resx">
       <DependentUpon>FrmQualificacao.cs</DependentUpon>
@@ -251,6 +252,7 @@
     <Compile Include="Source\Services\IWordService.cs" />
     <Compile Include="Source\Services\WordService.cs" />
     <Compile Include="Source\Views\IAddFieldView.cs" />
+    <Compile Include="Source\Views\IAddSpanView.cs" />
     <Compile Include="Source\Views\ITableConfigView.cs" />
     <Compile Include="Source\Views\IRibbonView.cs" />
     <Compile Include="Source\Views\RibbonView.cs">
