--- a/exercNetLex/exercNetLex.csproj
+++ b/exercNetLex/exercNetLex.csproj
@@ -306,6 +306,9 @@
   <ItemGroup>
     <None Include="Resources\contatoPJImg.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\checkImg.png" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
